# REmatch-paper

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
scripts/: benchmark.py  seaborn-boxplots.ipynb
scripts/config/: .gitignore
scripts/ipynb/: query_creation-2.ipynb  query_creation.ipynb  query_selector.ipynb  sample-retrieval.ipynb
scripts/ipynb/boxplots/: csv-analyser.ipynb  sparql.csv  stats.json
scripts/py/boxplots/config/: benchmark-config.json
scripts/py/sheets/: benchmark.py  drive_token.pickle  sheets_token.pickle
src/rematch/: CMakeLists.txt  charclass.cpp  charclass.hpp  exceptions.hpp  match.cpp  match.hpp  matchiterator.cpp  matchiterator.hpp  rematch.hpp
src/rematch/automata/: abs_dstate.hpp  state_subset.hpp
src/rematch/automata/dfa/: dfa.cpp  dfa.hpp  dstate.cpp  dstate.hpp  sdfa.cpp  sdfa.hpp  sdstate.cpp  sdstate.hpp
src/rematch/automata/nfa/: abstractva.hpp  eva.cpp  eva.hpp  lva.cpp  lva.hpp  state.cpp  state.hpp  sva.cpp  sva.hpp  udfa.cpp  udfa.hpp  uva.cpp  uva.hpp
src/rematch/evaluation/: evaluator.hpp  normal_evaluator.hpp  segment_evaluator.cpp  segment_evaluator.hpp  stats.hpp
src/rematch/factories/: absfactory.hpp  factories.cpp  factories.hpp  varfactory.cpp  varfactory.hpp
src/rematch/parse/: ast.cpp  ast.hpp  grammar.hpp  parser.cpp  parser.hpp
src/rematch/parse/visitors/: automata_visitor.cpp  automata_visitor.hpp  filter_factory_visitor.cpp  filter_factory_visitor.hpp  variable_factory_visitor.cpp  variable_factory_visitor.hpp
src/rematch/regex/: regex.cpp  regex.hpp  regex_options.hpp
src/rematch/structs/ecs/: ecs.cpp  ecs.hpp  enumerator.cpp  mempool.hpp
src/rematch/util/: util.cpp  util.hpp
src/targets/: CMakeLists.txt
src/targets/benchmark/: test-boost.cpp  test-onig.cpp  test-pcre.cpp  test-pcre2.cpp  test-re2.cpp  test-tre.cpp
src/targets/main/: rematch.cpp
